--- a/RunDo/RunDoApp/static/RunDoApp/style.css
+++ b/RunDo/RunDoApp/static/RunDoApp/style.css
@@ -1,26 +1,17 @@
 body {
-    background-image: url("images/womanrunning.jpg");
-    background-size: cover;
-}
-
-#copyright {
-    color: white;
+    /*background-image: url("images/womanrunning.jpg");
+    background-size: cover;*/
+    /*color:dimgrey;*/
+    background-color: rgba(204, 216, 237, 0.3) !important;
+    font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
 }
 
 input {
     color: black;
 }
 
-body {
-    font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
-}
-
-#titles {
-    color: white;
-}
-
 #genderbutton {
-    color: white;
+    /*color: white;*/
     padding-left: 15px;
 }
 
@@ -29,21 +20,42 @@ body {
     padding-top: 15px;
 }
 
-#profileStats {
-    color: white;
-}
-
-#calculate {
-    color: white;
-}
-
-#homepagestuff {
-    color: white;
-}
-
 #block_content {
-    height: 70%;
+    padding-bottom:60px;
 }
+
+/*.rundo {*/
+    /*min-height: 30% !important;*/
+    /*!*margin-top: 15px !important;*!*/
+/*}*/
+
+#footer {
+    bottom:0;
+    width:100%;
+    height:30px;
+}
+
 #delete_food {
     vertical-align: center;
+}
+
+#intro {
+    padding: 10px;
+    text-align: left;
+    color: #2d3d5b;
+}
+
+#profile {
+    padding-top: 10px;
+}
+
+#profile_stats {
+    margin-top: 10 !important;
+}
+
+/*.bg-* {*/
+    /*background-color: #3b9187*/
+/*}*/
+#titles {
+    padding: 10px;
 }
