--- a/RunDo/RunDoApp/templates/RunDoApp/about.html
+++ b/RunDo/RunDoApp/templates/RunDoApp/about.html
@@ -13,7 +13,7 @@ body {
     <div class="card bg-light mb-3 text-center" style="width: 600px; margin: auto; margin-top: 50px">
       <div class="card-header">rUNDO</div>
       <div class="card-body">
-        <h5 class="card-title">The best app to help with your cheat days</h5>
+        <h5 class="card-title">An app to help you channel your inner Joey Chestnut</h5>
         <p class="card-text">Thanks to everyone involved in the production of this app!!</p>
       </div>
     </div>
